# CrewAi-RAG

./: .gitignore  README.md  download_pdf.py  pyproject.toml  report.md  requirements.txt
indexation/: Indexation.ipynb  requirements.txt  test_rag.py
src/projet/: app.py  app_chainlit.py  crew.py  main.py  report.md
src/projet/config/: agents.yaml  tasks.yaml
src/projet/tools/: custom_tool.py
